# api/generated/model_configuration.go
@@ -1,9 +1,9 @@
 // Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
 
 /*
- * Weather App app API
+ * Weather app API
  *
- * API to access and configure the Weather App app
+ * API to access and configure the Weather app
  *
  * API version: 1.0.0
  */
@@ -17,7 +17,7 @@ type Configuration struct {
 	Id *int64 `json:"id,omitempty"`
 
 	// There should be things like API address, access keys and so on.
-	ApiAccessChangeMe string `json:"apiAccessChangeMe,omitempty"`
+	ApiKey string `json:"apiKey,omitempty"`
 
 	// Flag to enable or disable fetching from this API
 	Enable *bool `json:"enable,omitempty"`
@@ -28,13 +28,10 @@ type Configuration struct {
 	// Timeout in seconds
 	RequestTimeout *int32 `json:"requestTimeout,omitempty"`
 
-	// Array of rules combined by logical OR
-	AssetFilter [][]FilterRule `json:"assetFilter,omitempty"`
-
 	// Set to `true` by the app when running and to `false` when app is stopped
 	Active *bool `json:"active,omitempty"`
 
-	// List of Eliona project ids for which this device should collect data. For each project id all smart devices are automatically created as an asset in Eliona. The mapping between Eliona is stored as an asset mapping in the Weather App app.
+	// List of Eliona project ids for which this device should collect data. For each project id all smart devices are automatically created as an asset in Eliona. The mapping between Eliona is stored as an asset mapping in the Weather app.
 	ProjectIDs *[]string `json:"projectIDs,omitempty"`
 
 	// ID of the last Eliona user who created or updated the configuration
@@ -43,16 +40,10 @@ type Configuration struct {
 
 // AssertConfigurationRequired checks if the required fields are not zero-ed
 func AssertConfigurationRequired(obj Configuration) error {
-	if err := AssertRecurseInterfaceRequired(obj.AssetFilter, AssertFilterRuleRequired); err != nil {
-		return err
-	}
 	return nil
 }
 
 // AssertConfigurationConstraints checks if the values respects the defined constraints
 func AssertConfigurationConstraints(obj Configuration) error {
-	if err := AssertRecurseInterfaceRequired(obj.AssetFilter, AssertFilterRuleConstraints); err != nil {
-		return err
-	}
 	return nil
 }
