# openapi.yaml
@@ -227,7 +227,7 @@ components:
           description: Internal identifier for the configured API (created automatically).
           readOnly: true
           nullable: true
-        apiAccessChangeMe:
+        apiKey:
           type: string
           format: string
           description: There should be things like API address, access keys and so on.
@@ -246,15 +246,6 @@ components:
           description: Timeout in seconds
           default: 120
           nullable: true
-        assetFilter:
-          $ref: "#/components/schemas/AssetFilter"
-          nullable: true
-          example:
-            [
-              [{ "parameter": "deviceName", "regex": "Main.*" }, { "parameter": "deviceType", "regex": "110" }],
-              [{ "parameter": "macAddress", "regex": "(70:82:0e:12:28:cc|70:56:06:12:.*)" }],
-              [{ "parameter": "ipAddress", "regex": "192\\.168\\..*" }],
-            ]
         active:
           type: boolean
           readOnly: true
@@ -276,26 +267,6 @@ components:
           description: ID of the last Eliona user who created or updated the configuration
           nullable: true
           example: "90"
-
-    AssetFilter:
-      type: array
-      description: Array of rules combined by logical OR
-      items:
-        type: array
-        description: Array of rules combined by logical AND
-        items:
-          $ref: "#/components/schemas/FilterRule"
-
-    FilterRule:
-      type: object
-      description: Asset selection rule. Possible parameters are defined in app's README file.
-      properties:
-        parameter:
-          type: string
-          example: "name"
-        regex:
-          type: string
-          example: "^first_floor_.*$"
     Version:
       type: object
       properties:
